--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "orchestra/testbench": "^6.0||^7.0",
         "fakerphp/faker": "^1.9.1"
     },
-    "minimum-stability": "dev",
+    "version": "1.0.0",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
 
